<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/tvName"
        android:background="#BABABA"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:weightSum="1">

        <Switch
            android:id="@+id/mySwitch"
            android:layout_width="194dp"
            android:layout_height="41dp"
            android:background="#BABABA"
            android:text="@string/sort"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:background="#BABABA"
            android:gravity="center"
            android:text="@string/tap_on_item_to_see_contact_info" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="1dp">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="342dp"
        android:scrollbars="vertical" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:paddingTop="1dp">
    <Button
        android:id="@+id/btnAddContact"
        android:background="@drawable/selector"
        android:textColor="#FFFFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/add_contact" />
    </LinearLayout>
</LinearLayout>